# hangouts-gtk

./: .gitignore  hangouts-gtk.doap  meson.build
build-aux/: com.dosch.HangoutsGTK.json  com.dosch.HangoutsGTK.json.working
data/: com.dosch.HangoutsGTK-autostart.desktop.in  com.dosch.HangoutsGTK.appdata.xml.in  com.dosch.HangoutsGTK.desktop.in  com.dosch.HangoutsGTK.gschema.xml  com.dosch.HangoutsGTK.service.in  hangouts_gtk.gresource.xml  meson.build
data/ui/: chat_info.ui  chat_info_timeless.ui  chat_message_foreign.ui  chat_message_own.ui  conversation_add.ui  conversation_edit.ui  conversation_edit_panel.ui  conversation_edit_user_element.ui  conversation_sidebar.ui  conversation_sidebar_element.ui  conversation_views.ui  login_window.ui  main_window.ui  message_box.ui  popover_menu.ui  style.css  window.ui
po/: POTFILES  meson.build
src/: hangouts-gtk.in  hangoutslogger.py  login_window.py  main.py  main_window.py  meson.build
src/backend/: clientwrapper.py  conversationlistwrapper.py  conversationwrapper.py  hangupswrapper.py  image_cache.py  service.py  token_storage.py
src/widgets/: conversation_edit_panel.py  conversation_edit_user_element.py  conversation_sidebar.py  conversation_sidebar_element.py  message_box.py  message_views.py
